Update resume and portfolio templates to enhance descriptions and organization labels

--- a/index_template.html
+++ b/index_template.html
@@ -237,7 +237,7 @@
                     </ul>
                   {% endif %}
                   {% if edu.honors %}
-                    <h4>Honors</h4>
+                    <h4>Honors & Organizations</h4>
                     <ul>
                       {% for hon in edu.honors %}<li>{{ hon }}</li>{% endfor %}
                     </ul>
